添加资源文件

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DraftPaperActivity"/>
+        <activity
+            android:name=".DraftPaperActivity"
+            android:theme="@style/DraftStyle" />
     </application>
 
 </manifest>
